<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="#2C2A2B"
        android:orientation="vertical">

        <Button
            android:id="@+id/AddCardButton"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Add New Card"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ViewCardButton"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="View Card Deck"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/StartQuizButton"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Start the Quiz"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>