<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project4443_FlashCard</string>
    <string name="image_description">(image)</string>
    <string name="menu_title">Words</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add Card</string>
    <string name="quiz_question">Which word is this?</string>
    <string name="results_title">Result</string>
    <string name="correct_title">Correct!</string>
    <string name="incorrect_title">Sorry!</string>
    <string name="continue_string">Continue</string>
    <string name="try_again">Try again</string>
    <string name="correct_label">Correct:</string>
    <string name="incorrect_label">Incorrect:</string>
    <string name="complete_time_label">Complete time:</string>
    <string name="word">Word:</string>
    <string name="def">Definition:</string>

    <!-- QUIZ LENGTH PREFERENCES -->
    <string name="pref_quiz_length_title">Quiz Length</string>
    <string name="pref_quiz_length_key">questions</string>
    <string name="pref_quiz_length_summary">Select the number of questions in a quiz</string>

    <string-array name="pref_quiz_length_entries">
        <item>"1"</item>
        <item>"2"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"20"</item>
    </string-array>
    <string-array name="pref_quiz_length_values">
        <item>"1"</item>
        <item>"2"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"20"</item>
    </string-array>

    <!-- QUIZ VERSION PREFERENCES -->
    <string name="pref_quiz_mode">haptic or auditory</string>
    <string name="pref_quiz_mode_summary">switch to haptic or auditory mode</string>
    <string name="pref_quiz_mode_title">haptic or auditory</string>
    <!--CARD VIEW PREFERRENCES-->
    <string name="pref_view_mode">button or gesture</string>
    <string name="pref_view_mode_summary">switch to button or gesture mode</string>
    <string name="pref_view_mode_title">button or gesture</string>
</resources>