<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search..." />

    <ListView
        android:id="@+id/list_view"
        android:layout_below="@id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>